# cartulary

./: .aidevops.json  .gitignore  CHANGELOG.md  CLAUDE.md  Cartulary_Project_Plan.md  PHASE0_TEST_RESULTS.md  README.md  USER_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
.agents/: AGENTS.md
.beads/: config.yaml
.ctx/: graph.db
.github/workflows/: build.yml  deploy.yml  release.yml
.gitnexus/: meta.json
docs/: Scope.md
docs/research-papers/: Architecting Cartulary_ A Blueprint for Building Robust, Client-Side Archival Data Transformation Tools.md  AtoM EAD 2002 Import Validation.md  CONTENTdm EAD Import Profile Research.md  CONTENTdm Structural Comparison Findings.md  Client-Side EAD3 XML Generation Guidance.md  EAD3 Repository Import Briefing.md  From Spreadsheet to EAD3_ A Technical Blueprint for Generating Ingestible Finding Aids for ArchivesSpace, AtoM, and CONTENTdm.md  From Theory to Practice_ Validating and Optimizing Cartulary's EAD 2002 Output for Reliable AtoM Imports.md  Reverse-Engineering the CONTENTdm EAD Import Profile_ A Guide for Repository Developers.md
docs/research-prompts/: Prompt 1 — EAD3 Standard, Repository Import Profiles & Practical Minimum Field Set.md  Prompt 3 — AtoM EAD 2002 Import Test — Docker Setup and Field Mapping Validation.md  Prompt 4 — CONTENTdm EAD Import Profile Research.md  (+1 more)
public/: 404.html  example-finding-aid.xlsx
scripts/: generate-example.ts
src/: env.d.ts  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test-schemas/: ead.dtd
(+32 files in other folders)
