[package]
name = "cartulary"
version = "0.1.0"
description = "Spreadsheet to EAD3 XML Finding Aid Converter — desktop edition"
authors = ["Mark Bouck"]
license = "MIT"
repository = "https://github.com/mabo-du/cartulary"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cartulary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
